# rust-pairing

./: Cargo.toml  sqlite1.db
src/: main.rs
