[package]
name = "rust-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite", "mssql"] }

tokio = { version = "1", features = ["full"] }
